--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.travel_app_flutter">
    <application
-        android:label="travel_app_flutter"
+        android:label="Travellia"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
